--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-<h1>مرحبا عبدو</h1>
+
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <title>متجر عبدو - 🛍️</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background-color: #222;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      font-size: 28px;
+    }
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 30px;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .product {
+      background-color: white;
+      border-radius: 12px;
+      padding: 15px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.2s;
+    }
+    .product:hover {
+      transform: scale(1.03);
+    }
+    .product img {
+      width: 100%;
+      max-height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+    .product h2 {
+      font-size: 20px;
+      margin: 10px 0 5px;
+    }
+    .price {
+      color: #28a745;
+      font-weight: bold;
+      font-size: 18px;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #222;
+      color: #fff;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    🛍️ متجر عبدو | Abdo Store
+  </header>
+  <div class="container">
+    <div class="product">
+      <a href="details/cap.html">
+        <img src="cap.jpg" alt="قبعة">
+        <h2>🧢 قبعة شتوية</h2>
+        <p class="price">1500 DA</p>
+      </a>
+    </div>
+    <div class="product">
+      <a href="details/shirt.html">
+        <img src="shirt.jpg" alt="قميص">
+        <h2>👕 قميص قطني</h2>
+        <p class="price">2200 DA</p>
+      </a>
+    </div>
+    <div class="product">
+      <a href="details/shoes.html">
+        <img src="shoes.jpg" alt="حذاء">
+        <h2>👟 حذاء رياضي</h2>
+        <p class="price">4500 DA</p>
+      </a>
+    </div>
+    <div class="product">
+      <a href="details/watch.html">
+        <img src="watch.jpg" alt="ساعة">
+        <h2>⌚ ساعة يد</h2>
+        <p class="price">3000 DA</p>
+      </a>
+    </div>
+  </div>
+  <footer>
+    &copy; 2025 متجر عبدو. جميع الحقوق محفوظة.
+  </footer>
+</body>
+</html>
